# Changelog
Alle nennenswerten Änderungen werden in dieser Datei dokumentiert.

Das Format orientiert sich an [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
die Nummern #XXX beziehen sich auf die Ticketnummer im Gitlab
Datumsformat ist jjjj-mm-tt, also Jahr-Monat-Tag

## [1.1.9] - 2020-07-24

### added
- Grossstelltastenwarnung beim Login #392
- log Programm- und Javaversion on Startup #403
- Geburtsdatumcheck bei Patientenanlage #27
- feature toggle steuerbar mit IK/ini/.features Datei


### changed
- Aufnahme der Versionsnummer in die untere linke Ecke #410

### fixed
- VerkaufstabellenUpdate wird auch durchgeführt #273
- Variablenbelegung bei Taxierung #407
- HMR Check Auswertung max pro Fall Korrigiert #406
- OP Mahndatum lässt sich nicht löschen #350
- Tausender Trennzeichen in Offene Posten / Mahnwesen #387
- OP-RGR-AFR-VR läßt sich in 1.1.4 und 1.1.5 nicht starten #358
- 1.1.6 Änderung an Doku wird nicht übernommen #411

## [1.1.8] - 2020-07-01
### fixed
- Mehrwertsteuerberechnung in Verkaufsmodul fehlerhaft

## [1.1.7] - 2020-06-28
### added 
- Mehrwertsteueranpassung aufgrund von Corona in Verkaufsmodul

## [1.1.6] - 2020-05-20
### added
- Hygienepauschale in Rezept aufgenommen #383
- der Ausführungspfad (proghome) kann über die Umgebungsvariable THERAPIHOME gesetzt werden.
- Gitlab: Quelle wird automatisch compiliert, getestet und Artefakte erstellt.
- Konvention Testdatenbank IK = 123456789
- Feature Toggle ermöglicht das Schalten von neuen Features im Hauptbaum

### changed
- RehaHMK/src/rehaHMKPanels/RehaHMKPanel2.java no longer uses deprecated sun.image.jpeg lib und kompiliert jetzt auch mit openJDK

### fixed
- ICD-10 Recherche bei geöffnetem Rezept nicht aufrufbar. #208
- Kopie RGR falsche Vorlage - Werkzeugsymbol #354
- Kopieren von Rezepten - HM-Sparte wird nicht übernommen #357
- SQL-Modul: Fehler beim Lesen der Ini #359
- Updateservice von Pi 1.0 ab 1.1.x deaktivieren #365
- Eigenanteil wird falsch berechnet #373