@@ -17,7 +17,6 @@
 	<classpathentry kind="lib" path="/Libraries/lib/sql/jpmdbc.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/RehaCommon"/>
 	<classpathentry kind="src" path="/datenbank"/>
-	
 	<classpathentry kind="lib" path="/Libraries/lib/logging/logback-classic-1.2.3.jar"/>
 	<classpathentry kind="lib" path="/Libraries/lib/logging/logback-core-1.2.3.jar"/>
 	<classpathentry kind="lib" path="/Libraries/lib/logging/slf4j-api-1.7.25.jar"/>
@@ -31,5 +30,6 @@
 			<attribute name="test" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/Libraries/lib/ini/ini4j-0.5.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
