@@ -5,10 +5,13 @@ import java.io.IOException;
 import java.net.URL;
 import java.util.List;
 
+import org.ini4j.Ini;
 import org.thera_pi.updater.HTTPRepository;
 import org.thera_pi.updater.Version;
 import org.thera_pi.updater.VersionsSieb;
 
+import CommonTools.ini.INIFile;
+import environment.Path;
 import javafx.application.Application;
 import javafx.fxml.FXMLLoader;
 import javafx.scene.Scene;
@@ -19,14 +22,10 @@ public class Main extends Application {
 
     static List<File> updatefiles;
 
-
-
     @Override
     public void start(Stage primaryStage) throws IOException {
 
-
-
-        File updateFile=  updatefiles.get(0);
+        File updateFile = updatefiles.get(0);
 
         primaryStage.initStyle(StageStyle.UNDECORATED);
         URL location = getClass().getResource("UpdatesAvailable.fxml");
@@ -40,14 +39,30 @@ public class Main extends Application {
         primaryStage.show();
     }
 
-
-
     public static void main(String[] args) {
 
-        updatefiles = new VersionsSieb(new Version()).select( new HTTPRepository().filesList());
-        if(!updatefiles.isEmpty()) {
+        updatefiles = new VersionsSieb(new Version()).select(new HTTPRepository().filesList());
+        if (!updatefiles.isEmpty()) {
 
-        launch(args);
+            launch(args);
+        }
+    }
+
+    public static boolean isEnabled() {
+        File iniFile = new File(Path.Instance.getProghome() + "ini" + File.separator + "tpupdateneu.ini");
+        try {
+            if (iniFile.exists()) {
+
+                Ini updatesIni = new Ini(iniFile);
+                String updateSetting = updatesIni.get("TheraPiUpdates", "UpdateChecken");
+                return INIFile.booleanValueOf(updateSetting);
+
+            } else {
+                return true;
+            }
+        } catch (Exception e) {
+            return true;
+
         }
     }
 }
